Adicionei tela de login e corrigi bug de cadastro

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="styles.css">
+  
+  <link rel="icon" type="image/x-icon" href="img/pc.jpg">
 
   <title>Portfólio</title>
 </head>
@@ -61,7 +63,7 @@
       </div>
 
       <div class="headshot">
-  <img src="img/eu.jpeg" alt="foto do arthur" style="transform: scale(1.5);">
+  <img src="img/eu.jpg" alt="foto do arthur" style="transform: scale(1.7);">
 </div>
     </section>
 
@@ -168,6 +170,27 @@
             </div>
           </div>
         </div>
+
+        <div class="project-card">
+          <div class="project-image">
+            <img src="img/projeto4.png" alt="Cadastro de Usuários">
+          </div>
+          <div class="project-content">
+            <h3>Cadastro de Usuários</h3>
+            <p>Sistema completo de cadastro de usuários com frontend React e backend Node.js, utilizando MongoDB como banco de dados.</p>
+            <div class="project-technologies">
+              <span class="tech-tag">React</span>
+              <span class="tech-tag">Node.js</span>
+              <span class="tech-tag">MongoDB</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/limmazk/cadastro-de-usuario?tab=readme-ov-file" target="_blank" class="project-link">
+                <i class="fa-brands fa-github"></i>
+                Código
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="projects-button">
@@ -216,7 +239,7 @@
   </div>
   
   <div class="footer-bottom">
-    <p>&copy; 2024 Arthur Lima. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Arthur Lima. Todos os direitos reservados.</p>
   </div>
 </footer>
 
